--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -12,7 +12,7 @@
         <h2>You have been logged out</h2>
         <div class="border-top pt-3">
             <small class="text-muted">
-                <a href="{% url 'login_page' %}">Log In Again</a>
+                <a href="{% url 'login_page' %}"><strong>Log In Again</strong></a>
             </small>
         </div>
     </div>
