--- a/users/static/users/logout.css
+++ b/users/static/users/logout.css
@@ -3,12 +3,19 @@ body {
     background-color: #f7f7f7;
     margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center; /* Center content horizontally */
+    align-items: center; /* Center content vertically */
+    height: 100vh; /* Make the body fill the viewport height */
 }
 
-div {
-    margin: 150px;
-    padding: 150px;
-    width : 40%;
+.container {
+    width: 50%; /* Set width to 50% of the viewport */
+}
+
+.content {
+    margin: 10px;
+    padding: 10px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -43,23 +50,3 @@ a:hover {
 .text-muted a:hover {
     color: #0056b3;
 }
-
-/* logout.css */
-/* html, body {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.container {
-    text-align: center;
-}
-
-.content {
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-} */
